--- a/src/Json Template Format.csproj
+++ b/src/Json Template Format.csproj
@@ -10,19 +10,17 @@
     <Authors>aAndrzej-dev</Authors>
     <DebugType>embedded</DebugType>
     <Copyright>Copyright © aAndrzej-dev 2022</Copyright>
-    <PackageReadmeFile>Readme.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/aAndrzej-dev/Aadev.JTF</RepositoryUrl>
     <PackageProjectUrl>https://github.com/aAndrzej-dev/Aadev.JTF</PackageProjectUrl>
     <Description>Json Template Format</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
-    <Version>1.0.0-beta1</Version>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <Version>1.0.0-beta2</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
-    <Deterministic>true</Deterministic>
-
+	<Deterministic>true</Deterministic>
   </PropertyGroup>
-
+	
 
 
   <ItemGroup>
