--- a/src/Json Template Format.csproj
+++ b/src/Json Template Format.csproj
@@ -8,17 +8,20 @@
     <AssemblyName>Aadev.JTF</AssemblyName>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>aAndrzej-dev</Authors>
-    <DebugType>embedded</DebugType>
+    <DebugType>none</DebugType>
     <Copyright>Copyright © aAndrzej-dev 2022</Copyright>
     <RepositoryUrl>https://github.com/aAndrzej-dev/Aadev.JTF</RepositoryUrl>
     <PackageProjectUrl>https://github.com/aAndrzej-dev/Aadev.JTF</PackageProjectUrl>
     <Description>Json Template Format</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReleaseNotes></PackageReleaseNotes>
-    <Version>1.0.0-beta2</Version>
+    <PackageReleaseNotes>Fixed bug when array prefab has custom type
+Some bug fixes
+Documentation has been updated</PackageReleaseNotes>
+    <Version>1.0.0-beta3</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
 	<Deterministic>true</Deterministic>
+	<GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 	
 
