--- a/src/Json Template Format.csproj
+++ b/src/Json Template Format.csproj
@@ -14,16 +14,15 @@
     <PackageProjectUrl>https://github.com/aAndrzej-dev/Aadev.JTF</PackageProjectUrl>
     <Description>Json Template Format</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReleaseNotes>Conditions now are using conditions string
-Bug fixes and performance improvements</PackageReleaseNotes>
-    <Version>1.1.0-rc1</Version>
+    <PackageReleaseNotes>Bug fixes and performance improvements</PackageReleaseNotes>
+    <Version>1.1.0-rc2</Version>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <FileVersion>1.1.0.0</FileVersion>
 	<Deterministic>true</Deterministic>
 	<GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
-
+	
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
