--- a/src/Json Template Format.csproj
+++ b/src/Json Template Format.csproj
@@ -14,17 +14,15 @@
     <PackageProjectUrl>https://github.com/aAndrzej-dev/Aadev.JTF</PackageProjectUrl>
     <Description>Json Template Format</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReleaseNotes>Removed JtEnum
-Added suggestions for every value type
-Bug fixes and improvements</PackageReleaseNotes>
-    <Version>1.1.0-rc4</Version>
+    <PackageReleaseNotes>Bug fixes and improvements</PackageReleaseNotes>
+    <Version>1.1.0-rc5</Version>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <FileVersion>1.1.0.0</FileVersion>
 	<Deterministic>true</Deterministic>
-	<GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
-	
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
