--- a/src/Json Template Format.csproj
+++ b/src/Json Template Format.csproj
@@ -14,10 +14,10 @@
     <PackageProjectUrl>https://github.com/aAndrzej-dev/Aadev.JTF</PackageProjectUrl>
     <Description>Json Template Format</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReleaseNotes>Bug fixes and improvements</PackageReleaseNotes>
-    <Version>1.1.0-rc5</Version>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
+  <PackageReleaseNotes>Added MaxSize and SingleType in JtArray</PackageReleaseNotes>
+    <Version>1.1.1</Version>
+    <AssemblyVersion>1.1.1.0</AssemblyVersion>
+    <FileVersion>1.1.1.0</FileVersion>
 	<Deterministic>true</Deterministic>
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
