--- a/src/Json Template Format.csproj
+++ b/src/Json Template Format.csproj
@@ -14,15 +14,18 @@
     <PackageProjectUrl>https://github.com/aAndrzej-dev/Aadev.JTF</PackageProjectUrl>
     <Description>Json Template Format</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-  <PackageReleaseNotes>Added MaxSize and SingleType in JtArray</PackageReleaseNotes>
-    <Version>1.1.1</Version>
-    <AssemblyVersion>1.1.1.0</AssemblyVersion>
-    <FileVersion>1.1.1.0</FileVersion>
+    <Version>2.0.0-beta1</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
 	<Deterministic>true</Deterministic>
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+  <PackageReleaseNotes>Added CustomSources that replaced CustomValue
+  Added Working directory to JTemplate to prevent accessing other files
+  Bug fixes</PackageReleaseNotes>
+  <AnalysisLevel>6.0</AnalysisLevel>
   </PropertyGroup>
 
-
+	
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
