--- a/src/Json Template Format.csproj
+++ b/src/Json Template Format.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net7.0;net6.0;netstandard2.1</TargetFrameworks>
     <RootNamespace>Aadev.JTF</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -14,18 +13,18 @@
     <PackageProjectUrl>https://github.com/aAndrzej-dev/Aadev.JTF</PackageProjectUrl>
     <Description>Json Template Format</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>2.0.0-beta1</Version>
+    <Version>2.0.0-beta2</Version>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
 	<Deterministic>true</Deterministic>
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-  <PackageReleaseNotes>Added CustomSources that replaced CustomValue
-  Added Working directory to JTemplate to prevent accessing other files
-  Bug fixes</PackageReleaseNotes>
-  <AnalysisLevel>6.0</AnalysisLevel>
+  <PackageReleaseNotes>Added support for multiple prefabs of the same type
+Added a working directory parameter in the template load function to prevent access to files outside the specified folder
+Bug fixes and improvements</PackageReleaseNotes>
+
   </PropertyGroup>
 
-	
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
